# ncarnate

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
brand/: README.md  build_lockup.py  build_raster_lockup.py  compose_logo.py  globe.py  trace_logo.py
conda-recipe/: README.md  meta.yaml  recipe.yaml
docs/: api.md  api.rst  conf.py  fidelity-notes.md  index.md  index.rst  requirements.txt
docs/design/: 2026-07-08-hdfeos2-geolocation.md  ncarnate-audit.md  ncarnate-convert-manifest.md  ncarnate-handoff-schema-5.md  ncarnate-operation-result.md  ncarnate-stage-api.md
ncarnate/: __init__.py  __main__.py  atttypes.py  cli.py  constants.py  core.py  discovery.py  errors.py  formats.py  handoff.py  hashing.py  hdf4.py  hdf4_runtime.py  limits.py  result.py  stage.py
ncarnate/audit/: __init__.py  classify.py  codes.py  inspect.py  models.py  report.py
ncarnate/convert/: __init__.py  integrity.py  models.py  preflight.py  reader.py  report.py
ncarnate/eos/: __init__.py  gctp.py  grid.py  structmeta.py  swath.py
ncarnate/schemas/: __init__.py  handoff.schema.json
netcdf4_compressor/: __main__.py  log.txt
netcdf4_recompressor/: __init__.py  __main__.py  constants.py  log.txt
netcdf_recompressor/: __init__.py  __main__.py  constants.py  version.json
paper/: paper.bib  paper.md
tests/: conftest.py  test_attribute_types.py  test_cli.py  test_convert_collisions.py  test_convert_inplace_collisions.py  test_discovery.py  test_eos_units.py  test_formats.py  test_g5_handoff_sufficiency.py  test_handoff_gate.py  test_handoff_schema.py  test_hdf4_conversion.py  test_limits.py  test_operation_result.py  test_optional_hdf4.py  test_plan_hash.py  test_raw_granules.py  test_recompress_netcdf.py  test_sdist_contents.py  test_stage_api_4b.py  test_stage_api_g4.py
tests/audit/: record.schema.json  test_agreement.py  test_audit_path.py  test_checksum.py  test_classify.py  test_cli_dispatch.py  test_codes.py  test_contract.py  test_emission.py  test_error_codes.py  test_inspect.py  test_models.py  test_readonly.py  test_scaffold.py
tests/convert/: test_agreement.py  test_cli_dispatch.py  test_cli_integration.py  test_convert_manifest.py  test_inplace_skip.py  test_integrity.py  test_models.py  test_reader.py  test_summary_exit.py
tests/fixtures/: make_blocker_fixtures.py  make_fixtures.py  trim_hdfeos2.py
tests/fixtures/data/blockers/: compound_type.nc
tests/fixtures/data/hdfeos2/: amsre_5daysnow_trim.hdf  amsre_5daysnow_trim.provenance.json  amsre_seaice12km_trim.hdf  amsre_seaice12km_trim.provenance.json  mod03_trim.hdf  mod03_trim.provenance.json  myd05_trim.hdf  myd05_trim.provenance.json  raingrid_trim.hdf  raingrid_trim.provenance.json
tests/fixtures/data/netcdf/: endianness.nc  nested_groups.nc  packed_fill.nc  unlimited_dim.nc
tests/fixtures/operation_result/: amsre_seaice12km.result.json  handoff.schema.json  packed_fill.canonical.json
