[build-system]
# >= 1.27: the first hatchling that understands the PEP 639 SPDX `license`
# expression + `license-files` used below.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ncarnate"
dynamic = ["version"]
description = "Convert HDF4/HDF-EOS2 (MODIS, AMSR-E) to CF-annotated netCDF4 and losslessly recompress netCDF/HDF5 files."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Erick Shepherd", email = "dev@erickshepherd.com" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "netCDF", "netCDF4", "HDF5", "HDF4", "HDF-EOS", "HDF-EOS2",
    "compression", "recompression", "CF conventions", "geolocation",
    "swath", "grid", "MODIS", "AMSR-E", "xarray", "remote sensing",
    "GIS", "atmospheric science",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    # Floors track the versions the local build environment is verified
    # against (netCDF4 1.7.x, numpy 2.x); the Phase-4 CI matrix pins the
    # tested range. Loosening below these is an out-of-loop decision.
    "netCDF4>=1.6",
    "numpy>=1.26",
    # >= 0.11.6: the first release whose manylinux/macOS wheels bundle
    # libhdf4 (the no-system-HDF4 install story depends on it). The Windows
    # wheel ships no HDF4 runtime — see the README for the conda-forge/WSL
    # route.
    "pyhdf>=0.11.6",
    "pyproj>=3.6",
    "tqdm>=4.66",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
ncarnate = "ncarnate.cli:main"

[project.urls]
Homepage = "https://github.com/ErickShepherd/ncarnate"
Documentation = "https://ncarnate.readthedocs.io/en/stable/"
Source = "https://github.com/ErickShepherd/ncarnate"
Changelog = "https://github.com/ErickShepherd/ncarnate/releases"
Issues = "https://github.com/ErickShepherd/ncarnate/issues"

[tool.hatch.version]
path = "ncarnate/constants.py"

[tool.hatch.build.targets.wheel]
packages = ["ncarnate"]

[tool.hatch.build.targets.sdist]
# The sdist ships the package, the tests + fixtures (so
# `pip install <sdist> && pytest` works), and the fidelity contract; but
# NOT the internal planning/design/checklist/audit docs, which are
# development material, not part of the release.
exclude = [
    "docs/plans",
    "docs/design",
    "docs/owner-checklist-*.md",
    "docs/audits",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    # Cross-checks against the raw multi-MB granules kept outside the
    # repo (the local source-granule archive/); they self-skip where that store
    # is absent, so CI never runs them.
    "raw_granules: local-only cross-checks against raw granules",
]
filterwarnings = [
    # netCDF4-python assigns .shape internally, which numpy 2.5
    # deprecates; upstream noise, not ours to fix.
    "ignore:Setting the shape on a NumPy array:DeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Permissive: keep ruff's default lint set (pyflakes `F` + the core pycodestyle
# `E4`/`E7`/`E9` groups), which catches real problems -- unused imports,
# undefined names, comparison/statement bugs -- without fighting this
# codebase's deliberate aligned-assignment and blank-line style (E1/E2 spacing
# rules and E501 line length are intentionally NOT enforced).
select = ["E4", "E7", "E9", "F"]
